[gd_scene load_steps=9 format=3 uid="uid://b3ff7xd1sb0og"]

[ext_resource type="Script" uid="uid://dfitrdbm7ytic" path="res://ui/buildings/craft/crafting_menu.gd" id="2_67qoq"]
[ext_resource type="PackedScene" uid="uid://yjnjpa3w23jx" path="res://ui/common/backdrop.tscn" id="2_l4tro"]
[ext_resource type="PackedScene" uid="uid://c7kgb2e1ljqsh" path="res://ui/buildings/craft/cancel_order_button/cancel_order.tscn" id="3_gu54w"]
[ext_resource type="PackedScene" uid="uid://c78h66nde8kp4" path="res://ui/buildings/craft/recipe_details_card/recipe_details_card.tscn" id="3_kcnpb"]
[ext_resource type="Texture2D" uid="uid://dxb80j1fcp0dr" path="res://third-party/kenney_tiny-dungeon/Tilemap/tilemap_packed.png" id="4_whwbc"]
[ext_resource type="Script" uid="uid://3toongwvmnav" path="res://ui/buildings/craft/craft_button.gd" id="5_81kie"]
[ext_resource type="PackedScene" uid="uid://cnblvsu6tnmum" path="res://ui/common/close_button/close_button.tscn" id="7_qktl5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a8pbh"]
atlas = ExtResource("4_whwbc")
region = Rect2(144, 144, 16, 16)

[node name="CraftingMenu" type="Control" groups=["blocking"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_67qoq")

[node name="Backdrop" parent="." instance=ExtResource("2_l4tro")]
layout_mode = 1

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="H" type="HBoxContainer" parent="M"]
layout_mode = 2
alignment = 1

[node name="AvailableItemsGrid" type="GridContainer" parent="M/H"]
layout_mode = 2

[node name="ItemPanel" parent="M/H/AvailableItemsGrid" instance_placeholder="res://ui/buildings/craft/item_panel/item_panel.tscn"]
layout_mode = 2

[node name="ItemPanel2" parent="M/H/AvailableItemsGrid" instance_placeholder="res://ui/buildings/craft/item_panel/item_panel.tscn"]
layout_mode = 2

[node name="CancelOrder" parent="M/H/AvailableItemsGrid" instance=ExtResource("3_gu54w")]
layout_mode = 2

[node name="V" type="VBoxContainer" parent="M/H"]
layout_mode = 2

[node name="RecipeDetailsCard" parent="M/H/V" instance=ExtResource("3_kcnpb")]
layout_mode = 2

[node name="CraftButtons" type="HBoxContainer" parent="M/H/V"]
layout_mode = 2

[node name="CraftLessButton" type="Button" parent="M/H/V/CraftButtons"]
layout_mode = 2
text = "<"

[node name="CraftButton" type="Button" parent="M/H/V/CraftButtons"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Craft x1"
icon = SubResource("AtlasTexture_a8pbh")
script = ExtResource("5_81kie")

[node name="CraftMoreButton" type="Button" parent="M/H/V/CraftButtons"]
layout_mode = 2
text = ">"

[node name="CloseButton" parent="M/H" instance=ExtResource("7_qktl5")]
layout_mode = 2

[connection signal="pressed" from="M/H/V/CraftButtons/CraftLessButton" to="." method="_on_craft_less_button_pressed"]
[connection signal="pressed" from="M/H/V/CraftButtons/CraftButton" to="." method="_on_craft_button_pressed"]
[connection signal="pressed" from="M/H/V/CraftButtons/CraftMoreButton" to="." method="_on_craft_more_button_pressed"]
[connection signal="pressed" from="M/H/CloseButton" to="." method="close_menu"]
